2006-07-15	Richard van den Berg  <richard@vdberg.org>
	* Remove the use of NODE_ADD_CHILDREN, hopefully it is no longer needed
	* Added syntax changed from 10-manpages.dpatch
	* Added newlines as per SF bug #1461182

2006-06-13	Richard van den Berg  <richard@vdberg.org>
	* Fix stat type in report_tree() (Heiko Lehmann <hlehmann@fh-lausitz.de>)

2006-05-31	Richard van den Berg  <richard@vdberg.org>
	* Added support for posix_fadvice() (Pablo Virolainen)

2006-04-22	Richard van den Berg  <richard@vdberg.org>
	* Fix seg faults on OpenBSD (Axel Rau <Axel.Rau@Chaos1.DE>)

2006-04-22	Richard van den Berg  <richard@vdberg.org>
	* Fix mmap on HPUX (fredrik@soderblom.org patch 1474555)

2006-03-31	Richard van den Berg  <richard@vdberg.org>
	* Abort if aide.db does not have checksum when FORCEDBMD is used
	* Explain aide.conf and aide.db signing

2006-03-29	Richard van den Berg  <richard@vdberg.org>
	* Add spaces to error messages (Marc Haber)
	* Don't warn about rules referring to non-existent directories by default

2006-03-25	Richard van den Berg  <richard@vdberg.org>
	* Allow aide.db to be supplied on stdin (Pablo Virolainen)
	* Add patch to allow http/https/ftp URLs through libcurl (Pablo Virolainen)

2006-03-17	Richard van den Berg  <richard@vdberg.org>
	* Use system strnstr when available
	* Add --disable-static flag to configure

2006-03-13	Richard van den Berg  <richard@vdberg.org>
	* Applied manual patch from Marc Haber
	* Added note about problems with mhash 0.9.x

2006-03-12	Richard van den Berg  <richard@vdberg.org>
	* Mordernize use of AM_INIT_AUTOMAKE
	* Use AIDEVERSION to avoid clash with VERSION of other packages

2006-02-26	Richard van den Berg  <richard@vdberg.org>
	* Use @sysconfdir@ as directory in aide.1, SF bug #1438995

2006-02-23	Richard van den Berg  <richard@vdberg.org>
	* Set AIDEVERSION right after including config.h
	* Added note about SIGTERM (Marc Haber)

2006-02-18	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.11