@@ -2,6 +2,7 @@
 	* Remove the use of NODE_ADD_CHILDREN, hopefully it is no longer needed
 	* Added syntax changed from 10-manpages.dpatch
 	* Added newlines as per SF bug #1461182
+	* Added report_attributes group (Pablo Virolainen)
 
 2006-06-13	Richard van den Berg  <richard@vdberg.org>
 	* Fix stat type in report_tree() (Heiko Lehmann <hlehmann@fh-lausitz.de>)
